# monster-rpg-2

./: CMakeLists.txt  README.txt  WIN_README.txt  monster-rpg-2.manifest
android-studio/: .gitignore
android-studio/app/: build.gradle
android-studio/app/src/androidTest/java/ca/nooskewl/monsterrpg2/: ExampleInstrumentedTest.java
android-studio/app/src/main/: AndroidManifest.xml
android-studio/app/src/main/java/: AllegroEGL.java  Key.java
android-studio/app/src/main/java/com/nooskewl/m2/: License_Viewer_Activity.java  MO2Activity.java  MyBroadcastReceiver.java
android-studio/app/src/test/java/ca/nooskewl/monsterrpg2/: ExampleUnitTest.java
android-studio/gradle/wrapper/: gradle-wrapper.properties
android-studio/ndk-build-project/jni/: Android.mk  Application.mk
apple/ios/Monster RPG 2/: Info.plist  Monster RPG 2 Unleashed-Info.plist
apple/ios/Monster RPG 2.xcodeproj/: project.pbxproj
apple/ios/Monster RPG 2/MonsterRPG2.xcassets/AppIcon.appiconset/: Contents.json
apple/ios/Monster RPG 2/Unleashed.xcassets/AppIcon-1.appiconset/: Contents.json
apple/ios/Monster RPG 2/Unleashed.xcassets/LaunchImage-1.launchimage/: Contents.json
apple/mac/: Monster RPG 2 Demo-Info.plist  Monster RPG 2 MAS-Info.plist  Monster RPG 2 Steam-Info.plist
apple/mac/Monster RPG 2.xcodeproj/: project.pbxproj
data/: Dutch.utf8  English.utf8  French.utf8  German.utf8  Greek.utf8  Italian.utf8  Korean.utf8  Polish.utf8  Portuguese-Brazil.utf8  Portuguese-Europe.utf8  Russian.utf8  Spanish.utf8
docs/: 3rd_party.html  Monster RPG 2 - 3rd Party Licenses.txt
docs/text/: 409370_loc_english.vdf  409370_loc_french.vdf  409370_loc_german.vdf  409370_loc_italian.vdf  achieve.es.xlsx  achieve.gr.xlsx  achieve.kr.xlsx  achieve.nl.xlsx  achieve.pl.xlsx  achieve.pt-br.xlsx  achieve.pt-pt.xlsx  achieve.ru.xlsx  m2about.de.txt  m2about.en.txt  m2about.es-es.txt  m2about.fr.txt  m2about.gr.txt  m2about.it.txt  m2about.kr.txt  m2about.nl.txt  m2about.pl.docx  m2about.pt-br.txt  m2about.pt-pt.txt  m2about.ru.txt
include/: Configuration.hpp  apple.h  battle.hpp  init.hpp  iphone.h  java.h  macos.h  monster2.hpp  redundant.hpp  util.hpp
misc/saves/: beat_tig_fortress.save
misc/steam/mac/scripts/: depot-mo1.vdf  depot.vdf
misc/steam/windows/: run_build_mo1.bat  run_build_mo2.bat
src/: 3d.cpp  Area.cpp  CombatActions.cpp  CombatPlayer.cpp  Configuration.cpp  android.cpp  apple.m  battle.cpp  graphics.cpp  init.cpp  iphone.mm  lander.cpp  macos.M  monster2.cpp  pause.cpp  redundant.cpp  script.cpp  shooter.cpp  tgui.cpp  translate.cpp  util.cpp  widgets.cpp
tools/: inst.bat  sign.bat  sign.sh
